Changelog
=========


1.17.1 (unreleased)
-------------------

- Also freeze ``datetime.utcnow()``. [Rotonen]


1.17.0 (2017-10-02)
-------------------

- Add ``FTWIntegrationTesting`` and ``FTWIntegrationTestCase``. [jone]

1.16.0 (2017-08-08)
-------------------

- Support Plone 5.1 for ConsoleScriptLayer. [jone]

1.15.2 (2017-07-18)
-------------------

- Freezer: keep timezone info when moving clock forward / backward. [jone]
- Freezer: Fix DST-bug in today() and time(). [jone]


1.15.1 (2017-07-04)
-------------------

- Fix savepoint simulation to cleanup savepoints. [jone]


1.15.0 (2017-07-03)
-------------------

- Add savepoint simulation to transaction interceptor. [jone]


1.14.0 (2017-06-23)
-------------------

- Do not require "Plone" egg. [jone]


1.13.0 (2017-06-20)
-------------------

- Add transaction interceptor. [jone]


1.12.0 (2017-06-19)
-------------------

- Support Plone 5.1 [mathias.leimgruber, jone]
- Remove splinter browser. Use ftw.testbrowser instead. [mathias.leimgruber, jone]
- Drop Plone 4.1 support. [jone]


1.11.0 (2016-03-31)
-------------------

- Freezer: reimplement "now" patching with forbiddenfruit.
  This fixes problems with pickling and comparison of frozen datetime objects.
  [jone]


1.10.3 (2015-10-11)
-------------------

- Freezer: disable freezing while committing to database for preventing pickling errors.
  [jone]

- Freezer bugfix: replace datetime instances when leaving freeze context manager.
  [jone]


1.10.2 (2015-07-30)
-------------------

- Added timezone(`tz`) support for "freeze".
  [phgross]


1.10.1 (2015-07-27)
-------------------

- Use "now" as default of "freeze".
  [jone]


1.10.0 (2015-05-18)
-------------------

- Update the freezed time with ``forward`` and ``backward``.
  [jone]


1.9.1 (2015-05-15)
------------------

- Fix site hook within ``staticuid`` decorated methods.
  [jone]


1.9.0 (2015-05-15)
------------------

- Add ``staticuid`` decorator for having static uids.
  [jone]

