@@ -35,3 +35,16 @@ class TestStaticUIDS(TestCase):
     @staticuid()
     def test_site_hook_is_set(self):
         self.assertTrue(getSite(), 'The site hook (getSite) is not set.')
+
+    def test_staticuid_may_be_used_as_context_manager(self):
+        with staticuid('foo'):
+            one = self.portal.get(self.portal.invokeFactory('Document', 'one'))
+        self.assertEquals('foo00000000000000000000000000001', IUUID(one))
+
+    def test_context_manager_requires_prefix(self):
+        with self.assertRaises(ValueError) as cm:
+            with staticuid():
+                pass
+        self.assertEquals(
+            'A prefix must be defined when using staticuid as a context manager.',
+            str(cm.exception))
